fix: unwanted overflow behavior on IOS devices

--- a/components/progress/ActivityLineGraph/ActivityLineGraph.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityLineGraph.module.scss
@@ -29,6 +29,7 @@
     }
 
     .day-selector {
+      display: block;
       justify-self: end;
       font-size: $font-small;
       cursor: pointer;
