--- a/components/progress/StreakOverview/StreakOverview.module.scss
+++ b/components/progress/StreakOverview/StreakOverview.module.scss
@@ -30,6 +30,7 @@
     }
 
     .sort {
+      display: block;
       justify-self: end;
       font-size: $font-small;
       cursor: pointer;
